k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: cloudcart

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: dharshanplans/cloudcart-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5000
