k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudcart-ingress
  namespace: cloudcart

spec:
  ingressClassName: nginx

  rules:
    - host: cloudcart.local

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service

                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend-service

                port:
                  number: 5000
